fix: update execution count and remove comment in task creation

--- a/Array/prj_2.ipynb
+++ b/Array/prj_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b8c1294c",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
     "            'description': description,\n",
     "            'priority': priority,\n",
     "            'status': 'pending',\n",
-    "            'created_at': 'today'  # In real app, use datetime\n",
+    "            'created_at': 'today'\n",
     "        }\n",
     "        self.tasks.append(task)\n",
     "        print(f\"Task added: {description}\")\n",
